#menubar background position changed to adjust for mac ff spacing issue

--- a/custom.css
+++ b/custom.css
@@ -82,14 +82,14 @@ body.page-parent #home-content{position:relative;top:-15px;z-index:30;}
 #menubar .nav li.page-item-3990 a{background-position:-299px 0;width:75px;}
 #menubar .nav li.page-item-3798 a{background-position:-299px 0;width:75px;}
 #menubar .nav li.page-item-3997 a{background-position:-299px 0;width:79px;}
-#menubar .nav li.page-item-4001 a{background-position:-299px 0;width:110px;}
-#menubar .nav li.page-item-4003 a{background-position:-299px 0;width:110px;}
+#menubar .nav li.page-item-4001 a{background-position:-299px 0;width:115px;}
+#menubar .nav li.page-item-4003 a{background-position:-299px 0;width:115px;}
 #menubar .nav li.page-item-3994 a{background-position:-299px 0;width:90px;}
 
 #menubar .nav li.last{
 	background-image:url('/wp-content/uploads/menubar-nav-bg.png');
 	background-position:right top;
-	width:139px;
+	width:129px;
 	height:34px;
 }
 #menubar .nav div.subtext {
